route-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend-route
  namespace: my-app
  uid: edc4ced4-bb29-4be8-8450-e00a71a14de0
  resourceVersion: '883848'
  creationTimestamp: '2025-06-24T15:19:28Z'
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-06-24T15:24:27Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:host': {}
          'f:path': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-06-24T15:24:27Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: simple-login.sirasith.net
  path: /api
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: simple-login.sirasith.net
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2025-06-24T15:24:27Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.itz-ojeb01.hub03-lb.techzone.ibm.com
